cms/style.css
body{
    margin: 0;
}

.snapCMS {
    --primary: #28979f;
    --background: color-mix(in srgb, var(--primary), var(--white) 80%);

    --red: #e75d3b;
    --yellow: #dfca3c;
    --green: #92e47d;

    --white: rgb(255, 255, 255);
    --black: rgb(0, 0, 0);
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    -webkit-font-smoothing: antialiased;
    font-display: swap;
    color: var(--black);
}

.snapCMS h1{
    margin: 0;
}

.snapCMS .primary{
    color: var(--primary);
    font-weight: bold;
}

.snapCMS button{
    padding: 0.5rem 1rem;
    border: none;
    cursor: pointer;
    background: var(--primary);
    color: var(--white);
    border-radius: 5px;
    transition: 0.1s ease-in;
    font-size: 0.8rem;
    font-weight: 500;
}

.snapCMS button:hover{
    background: color-mix(in srgb, var(--primary), var(--black) 20%);
}

.snapCMS input{
    min-width: 70%;
    border: none;
    border-bottom: 2px var(--primary) solid;
    padding: 0.5rem 1rem;
}

.snapCMS input:focus{
    outline: none;
    border-color: var(--primary);
}

/* Default 404 */
#error404.snapCMS div{
    position: absolute;
    top: 48%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

#error404.snapCMS div h1{
    font-size: 10rem;
}

#error404.snapCMS div span{
    font-size: 1.2rem;
}

/* Login page */
#loginPage.snapCMS{
    background-color: var(--background);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    height: 90vh;
}

#loginPage.snapCMS .footer, #loginPage.snapCMS .footer a{
    color: gray;
    font-size: 0.8rem;
}


#loginPage.snapCMS > .centerBox{
    position: absolute;
    top: 48%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 3rem;
    min-width: 20%;
    background: var(--white);
    border-radius: 10px;
    box-shadow: 1px 1px 50px 0px rgba(0,0,0,0.2);
}

#loginPage.snapCMS form{
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    align-items:center;
}

/* Alerty */
.snapCMS .alertBox{
display: flex;
gap: 0.5rem;
flex-direction: column;
justify-content: center;
position:fixed;
top:0;
left: 50%;
transform: translateX(-50%);
margin-top: 5px;
}

.snapCMS .alertBox .alert{
    font-size: 0.9rem;
    padding: 0.5rem 1rem;
    background-color: rgb(from var(--yellow) r g b / 0.9);
    color: oklch(from var(--yellow) 0.35 c h);
    border-radius: 5px;
    display: flex;
    gap: 0.5rem;
    align-items: center;
    opacity: 100%;
    transition: 0.1s ease-in;
    cursor: pointer;
    }

    .snapCMS .alertBox .alert:hover{
    opacity: 70%;
    }

    .snapCMS .alertBox .alert.error{
        background-color: rgb(from var(--red) r g b / 0.9);
        color: oklch(from var(--red) 0.35 c h);
    }

    .snapCMS .alertBox .alert.success{
        background-color: rgb(from var(--green) r g b / 0.9);
        color: oklch(from var(--green) 0.35 c h);
    }

    .snapCMS .alertBox .alert.warning{
        background-color: rgb(from var(--yellow) r g b / 0.9);
        color: oklch(from var(--yellow) 0.35 c h);
    }



/* AdminBar */
.snapCMS #adminBar{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 0.5rem 2rem;
    background-color: color-mix(in srgb, var(--background), var(--primary) 10%);
}

.snapCMS:has(#adminBar){
    position: sticky;
    top: 0;
    z-index: 999;
}

.snapCMS #adminBar button {
    min-width: 6rem;
}

.snapCMS #adminBar a{
    color: oklch(from var(--primary) 0.3 c h);
    text-decoration: none;
    font-size: 0.8rem;
    font-weight: 500;
    transition: 0.1s ease-in;
}

.snapCMS #adminBar a:hover{
    color: var(--black);
}

/* Edit */
.editable{
transition: 0.1s ease-in-out;
}

p > .editable, div > .editable{
display: block;
}

.editable:hover{
border: dashed gray 1px;
}

button:has(.editable), 
a:has(.editable) {
    pointer-events: none;
    cursor: default;
}

.editable {
    pointer-events: auto !important;
    cursor: text;
}

